--- a/INDEX.html
+++ b/INDEX.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-        <img src="http://placekitten.com/500/150" alt="Big Cat Pic">
+        <img src="https://placekitten.com/300/150" alt="Big Cat Pic">
     </div>
     <div id="icons">
         <span>ICON</span>
@@ -19,52 +19,55 @@
        
     </div>
     <div id="mini-layout">
-        <span>
+        <!--Cat-->
+        <span class="animalPics">
             <div>
-                <img src="http://placekitten.com/100/100" alt="pic">
+                <img src="http://placekitten.com/100/100" alt="Cat Pic">
             </div>
             <div>
-                <strong>Curious Kitten</strong>
+                <strong>Cute Kitten</strong>
             </div>
             <div>
-                <p>A description</p>
+                <p>Say Cheese!</p>
             </div>
             <div>
-                <a href="http://placekitten.com">Link text</a>
+                <a href="http://placekitten.com">Side Head Kittens</a>
             </div>
         </span>
 
-        <span>
+        <span class="animalPics">
+        <!--Dog-->
             <div>
-                <img src="http://place-puppy.com/100x100" alt="Pic">
+                <img src="http://place-puppy.com/100x100" alt="Dog Pic">
             </div>
             <div>
                 <strong>Silly Puppy</strong>
             </div>
             <div>
-                <p>So curious!</p>
+                <p>Parkour makes me happy</p>
             </div>
             <div>
                 <a href="http://place-puppy.com">More Dogs</a>
             </div>
         </span>
 
-        <span>
+        <span class="animalPics">
+        <!--Bear-->
             <div>
-                <img src="Your choice of placeholderimage" alt="pic">
+                <img src="https://placebear.com/100/100" alt="Bear Pic">
             </div>
             <div>
-                <strong>Bold Title</strong>
+                <strong>Bear taking a bath</strong>
             </div>
             <div>
-                <p>A description</p>
+                <p>Enjoying the Bubbles before a date</p>
             </div>
             <div>
-                <a href="Your choice of link">Link text</a>
+                <a href="placebear.com">Link text</a>
             </div>
         </span>
         
-        <span>
+        <span class="animalPics">
             <div>
                 <img src="Your choice of placeholderimage" alt="pic">
             </div>
